# kinstaller

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/kinstaller/: Cargo.toml  build.rs
crates/kinstaller/native/: getauxval_stub.c
crates/kinstaller/src/: controller.rs  device_fb.rs  device_power.rs  main.rs
crates/kinstaller/ui/: app.slint  detail.slint  keyboard.slint  run.slint  softfail.slint  state.slint  tabs.slint  theme.slint  widgets.slint
crates/kpm/: Cargo.toml
crates/kpm-sys/: Cargo.toml  build.rs
crates/kpm-sys/shim/: kpmio_shim.c
crates/kpm-sys/src/: api.rs  compat.rs  compat_table.rs  io.rs  lib.rs  types.rs
crates/kpm-sys/tests/: compat.rs
crates/kpm/src/: backend.rs  client.rs  lib.rs  mock.rs  real.rs
crates/kpm/tests/: mock_backend.rs
debug/: 2026-07-07-glibc-zigbuild-segfault-musl-fix.md
docker/: Dockerfile
package/: install.sh  launch.sh  manifest.json  uninstall.sh
scripts/: build-in-container.sh  build-target.sh  fetch-fonts.sh  gen-compat-table.sh  kindle-screenshot.sh  pack.sh  setup-koxtoolchain.sh  setup-orbstack.sh  setup.sh
tests/: kpm-dev-resolver.sh
