[package]
name = "kinstaller"
description = "Cydia-style GUI package manager for jailbroken Kindles, powered by KPM"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Desktop preview: mock backend + winit window (default for development).
default = ["mock-backend"]
mock-backend = ["kpm/mock", "slint/backend-winit"]
# On-device build: real libkpm backend + Kindle framebuffer Slint backend.
device = ["kpm/libkpm", "dep:slint-backend-kindle", "dep:libc"]

[dependencies]
kpm = { workspace = true }
slint = { version = "1.17", default-features = false, features = [
    "compat-1-2",
    "std",
    "renderer-software",
] }
slint-backend-kindle = { version = "0.5", optional = true }
# Unify fontique features for Linux cross-builds: dlopen avoids pkg-config for
# armv7 targets when building on macOS (Slint pulls fontique 0.10 with "system").
fontique = { version = "0.10", default-features = false, features = [
    "std",
    "system",
    "fontconfig-dlopen",
] }
libc = { version = "0.2", optional = true }

[build-dependencies]
slint-build = "1.17"
